- The lifestyle assets "Merchandise: Goods (Avail X)" are now correctly named "Merchandise: Goods (Specific Item) (Avail X)" and now appropriately require the character to select the specific legal good that is being sold.

Changed/New Strings:
- String_RestrictedItemsHidden
- Label_Options_MugshotCompression
- Label_Options_ImageQuality
- String_Lossless_Compression_Option
- String_Lossy_Compression_Option
- String_Bold
- String_Italic
- String_Underline
- String_Strikethrough
- String_Font
- String_ForeColor
- String_BackColor
- String_AlignLeft
- String_AlignCenter
- String_AlignRight
- String_UnorderedList
- String_IncreaseIndent
- String_DecreaseIndent

Build 212
Application Changes:
- When entering Nuyen and Karma expenses for Working for the Man/People, it's now possible to flag the expense entry as always being present in the Expense log. This will in effect reduce the Career Karma or Career Nuyen by the selected amount. Closes #4096, closes #3613
- Added InitiationGroup, InitiationOrdeal and InitiationSchooling option values for Submersion and Initiation respectively. Ensures that values are correct across multiple locations. Currently not exposed to user change. 
- Traditions that have an empty Drain value will automatically be permitted to choose their drain attribute. Allows the Toxic tradition to select the Drain attributes to use.
- Added contributetobp property to Qualities as an accessible property via XML. Allows for a quality to contribute to your Limit, but not consume karma during character creation. Has no effect during career mode. 
- Exposed Note-fetching mechanism to Armor, Armor Mods, Cyberware, Gear, Lifestyle Qualities, Vehicles, Vehicle Mods, Weapons, and Weapon Accessories. When created, Chummer will attempt to fetch relevant text from the PDF, if it is linked.
- Altered behaviour of special attributes having an effective metatype minimum below zero during character creation that requires spending additional priority points. 