@@ -1,0 +1,39 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--This file is part of Chummer5a.
+
+    Chummer5a is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Chummer5a is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Chummer5a.  If not, see <http://www.gnu.org/licenses/>.
+
+    You can obtain the full source code for Chummer5a at
+    https://github.com/chummer5a/chummer5a
+-->
+<chummer>
+  <accessories>
+    <accessory>
+      <id>036742ce-95d8-4510-b25f-5c380ef1076e</id>
+      <name>Imaging Scope (Optical)</name>
+      <mount>Top</mount>
+      <avail>2</avail>
+      <cost>300</cost>
+      <source>SR5</source>
+      <page>432</page>
+      <gears>
+        <usegear>
+          <name>Vision Magnification</name>
+          <category>Vision Enhancements</category>
+        </usegear>
+      </gears>
+      <rating>0</rating>
+    </accessory>
+  </accessories>
+</chummer>
